# TJ-CG

./: .gitignore  CMakeLists.txt  README.md
cli-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cli-build/lib/glad/: Makefile  cmake_install.cmake
cli-build/lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
cli-build/lib/glfw-3.4/docs/: Doxyfile  Makefile  cmake_install.cmake
cli-build/lib/glfw-3.4/src/: Makefile  cmake_install.cmake
cli-build/src/circle/: Makefile  cmake_install.cmake
cli-build/src/cube/: Makefile  cmake_install.cmake
cli-build/src/elements/: Makefile  cmake_install.cmake
cli-build/src/solar-system/: Makefile  cmake_install.cmake
cli-build/src/sphere/: Makefile  cmake_install.cmake
include/: circle.hpp  common.hpp  cube.hpp  elements.hpp  solar-sys.hpp  sphere.hpp
include/glad/: glad.h
lib/circle/: CMakeLists.txt  circle.cc
lib/elements/: CMakeLists.txt  elements.cc
lib/glad/: CMakeLists.txt  glad.c
scripts/: config.cmake  functions.cmake
shaders/: circleShader.frag.glsl  circleShader.vert.glsl  cubeShader.frag.glsl  cubeShader.vert.glsl  sphereShader.frag.glsl  sphereShader.vert.glsl
src/circle/: circle.cc
src/cube/: CMakeLists.txt  cube.cc  neon_cube.cc
src/elements/: shaders.cc
src/solar-system/: CMakeLists.txt  main.cc  planets.cc  solar-sys.cc
src/sphere/: CMakeLists.txt  main.cc  sphere.cc
